2008-12-15  Darren Kenny  <darren.kenny@sun.com>

	* common/nwamui_cond.h, common/nwamui_cond.c: 
	  Update condition object to match libnwam equivalent, and also
	  support addition of an object for NCU/ENM/LOC field types.
	* common/nwamui_ncu.h, common/nwamui_ncu.c:
	  Update to add API accessors for activation_mode, priority group,
	  priority group mode and use of a list of NwamuiCond objects for
	  conditions.
	* common/nwamui_env.h, common/nwamui_env.h:
	  Update to use new type names for conditions.

2008-12-08  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam_conn_stat_panel.c, capplet/nwam_net_conf_panel.c,
	  capplet/nwam_pref_dialog.c, common/nwamui_ncp.c:
	  Don't crash if we can't read the configuration.
	* common/nwamui_ncu.c: 
	  Extract the device name from the NCU name.
	* nwam_core/*:
	  Update to latest build from Alan on Dec 8.
	* nwam_core/example_configurations:
	  Add example configurations storage dir, for reference.

2008-12-04  Calum Benson <calum.benson@sun.com>

	* capplet/nwam-manager-properties.glade:

	Some changes to Location and VPN dialog for Phase 1; more to
	come...	

2008-11-28  Darren Kenny  <darren.kenny@sun.com>

	* Makefile.am, 
	  capplet/Makefile.am, capplet/nwam_conn_conf_ip_panel.c,
	  capplet/nwam_pref_dialog.c, capplet/nwam_wireless_dialog.c,
	  common/Makefile.am, common/libnwamui.h, common/nwamui_daemon.c,
	  common/nwamui_daemon.h, common/nwamui_enm.c, common/nwamui_enm.h,
	  common/nwamui_env.c, common/nwamui_env.h, common/nwamui_ip.c,
	  common/nwamui_ip.h, common/nwamui_ncp.c, common/nwamui_ncp.h,
	  common/nwamui_ncu.c, common/nwamui_ncu.h, common/nwamui_svc.c,
	  common/nwamui_svc.h, common/nwamui_wifi_net.c,
	  common/nwamui_wifi_net.h, configure.in, daemon/Makefile.am,
	  daemon/main.c, daemon/notify.h, daemon/nwam-enm-action.c,
	  daemon/nwam-env-action.c, daemon/nwam-menu-action-group.c,
	  daemon/nwam-menu-radio-action-group.c, daemon/nwam-menu.c, 
	  daemon/nwam-wifi-action.c: